--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   --main-blue: #044264;
+  --gray: #666666;
+  --bg-modal-whitegray: #EEF1F6;
+  --green-input: #37A96D;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 }
