--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
   box-sizing: border-box;
 }
 
-/* html { */
-/*   font-size: 1px; */
-/* } */
+html {
+  font-size: 1px;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
