main section result page created

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --gray: #666666;
   --bg-modal-whitegray: #EEF1F6;
   --green-input: #37A96D;
+  --bg-gray-detail: #eef1f6ff;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 }
